# fetefoto

./: .gitignore  Cargo.toml  roadmap.txt
src/: db.rs  filesystem.rs  image.rs  main.rs
