[package]
name = "fetefoto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
sha2 = { version = "0.10", default-features = false }
base64ct = { version = "1.6.0", features = ["alloc"] }
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
thiserror = "1.0.63"
